--- a/MVCRealEstate/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVCRealEstate/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVCRealEstate
 @using MVCRealEstate.Models
+@using MVCRealEstateData
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
