--- a/MVCRealEstate/Views/Account/Register.cshtml
+++ b/MVCRealEstate/Views/Account/Register.cshtml
@@ -28,6 +28,13 @@
     </div>
     <hr />
     <button type="submit" class="btn btn-primary">Kaydol</button>
+    <p>&nbsp;</p>
+    @if (!ViewContext.ModelState.IsValid)
+    {
+        <div class="alert alert-danger">
+            <div asp-validation-summary="All"></div>
+        </div>
+    }
 </form>
 
 @section Scripts{ 
