--- a/MVCRealEstate/Views/_ViewImports.cshtml
+++ b/MVCRealEstate/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MVCRealEstate
 @using MVCRealEstate.Models
+@using System.Security.Claims
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
