--- a/MVCRealEstate/Views/Shared/_Layout.cshtml
+++ b/MVCRealEstate/Views/Shared/_Layout.cshtml
@@ -27,6 +27,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Posts">
+                                <i class="bi bi-megaphone"></i>
+                                İlanlarım
+                            </a>
+                        </li>
+
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
@@ -42,9 +49,16 @@
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Hoş geldiniz Sn. @User.FindFirst(ClaimTypes.GivenName).Value
+                                    Hoş geldiniz Sn. @User.FindFirstValue(ClaimTypes.GivenName)
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="ChangePassword">
+                                            <i class="bi bi-key"></i>
+                                            Parola Değiştir
+                                        </a>
+                                    </li>
+
                                     <li>
                                         <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="ChangePassword">
                                             <i class="bi bi-key"></i>
@@ -72,7 +86,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top fixed-bottom bg-secondary text-white">
         <div class="container">
             &copy; 2023 - MVCRealEstate - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
