--- a/MVCRealEstate/Views/Home/Index.cshtml
+++ b/MVCRealEstate/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+    <partial name="_SearchFormPartial" model="new SearchViewModel()" />
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+<h2 class="border-bottom">Son Eklenenler</h2>
+<partial name="_PostListPartial" model="ViewBag.Latest" />
