--- a/MVCRealEstate/Views/Account/Posts.cshtml
+++ b/MVCRealEstate/Views/Account/Posts.cshtml
@@ -19,27 +19,47 @@
             <th>Tarih</th>
             <th>Görsel</th>
             <th>Başlık</th>
+            <th>İl/İlçe</th>
             <th>Fiyat</th>
             <th>Kategori</th>
             <th>Tür</th>
+            <th>&nbsp;</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var post in Model)
         {
             <tr>
-                <td>@post.Date.ToShortDateString()</td>
+                <td class="align-middle">@post.Date.ToShortDateString()</td>
                 <td>
                     <img src="@post.Image" height="80" />
                 </td>
-                <td>
+                <td class="align-middle">
                     @post.Name
                 </td>
-                <td>
-                    @post.Price.ToString("c0");
+                <td class="align-middle">
+                    @post.District!.Name / @post.District!.Province!.Name
                 </td>
-                <td>@post.Category!.Name</td>
-                <td>...</td>
+                <td class="align-middle">
+                    @post.Price.ToString("c0")
+                </td>
+                <td class="align-middle">@post.Category!.Name</td>
+                <td class="align-middle">
+                    @switch (post.Type)
+                    {
+                        case PostTypes.ForSale:
+                            <span>Satılık</span>
+                            break;
+                        case PostTypes.ForRent:
+                            <span>Kiralık</span>
+                            break;
+                    }
+                </td>
+                <td class="align-middle">
+                    <a class="btn btn-danger" asp-action="Remove" asp-route-id="@post.Id">
+                        <i class="bi bi-trash"></i>
+                    </a>
+                </td>
             </tr>
         }
     </tbody>
