--- a/MVCRealEstate/Views/Shared/_PostBoxPartial.cshtml
+++ b/MVCRealEstate/Views/Shared/_PostBoxPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Post
 <div class="col">
     <div class="card h-100">
-        <img class="card-img-top" src="@Model.Image" />
+        <img class="card-img-top" src="@(Model.Image ?? "/images/noimage.jpg")" />
         <div class="card-body">
             <h5 class="card-title">@Model.Name</h5>
             <p class="card-text">@Model.Price.ToString("c0")</p>
