--- a/MVCRealEstate/Views/Shared/_SearchFormPartial.cshtml
+++ b/MVCRealEstate/Views/Shared/_SearchFormPartial.cshtml
@@ -1,29 +1,35 @@
 ﻿@model SearchViewModel
-    <div class="form-panel d-flex align-items-center justify-content-center rounded-3 mb-4">
-        <div class="p-3 bg-opacity-50 bg-white rounded d-flex">
-            <form method="post" asp-action="Search">
-                <div class="d-flex justify-content-between gap-2">
-                    <div class="">
-                        <select class="form-select" asp-for="ProvinceId" asp-items="ViewBag.Districts" placeholder="İl / İlçe"></select>
-                    </div>
-                    <div class="">
-                        <input class="form-control" asp-for="MinPrice" placeholder="En Düşük" />
-                    </div>
-                    <div class="">
-                        <input class="form-control" asp-for="MaxPrice" placeholder="En Yüksek" />
-                    </div>
-                    <div class="">
-                        <select class="form-select" asp-for="CategoryId" asp-items="ViewBag.Categories" placeholder="Tür"></select>
-                    </div>
-                    <div class="">
-                        <select class="form-select" asp-for="PostType" asp-items="@Html.GetEnumSelectList<PostTypes>()" placeholder="Tür"></select>
-                    </div>
-                    <div class="">
-                        <button type="submit" class="btn btn-primary">
-                            <i class="bi bi-search"></i> Ara
-                        </button>
-                    </div>
+<div class="form-panel d-flex align-items-center justify-content-center rounded-3 mb-4">
+    <div class="p-3 bg-opacity-50 bg-white rounded d-flex">
+        <form method="get" asp-controller="Home" asp-action="Search">
+            <div class="d-flex justify-content-between gap-2">
+                <div class="">
+                    <select class="form-select" asp-for="DistrictId" asp-items="ViewBag.Districts" placeholder="İl / İlçe">
+                        <option selected>[Seçiniz]</option>
+                    </select>
                 </div>
-            </form>
-        </div>
+                <div class="">
+                    <input class="form-control" asp-for="MinPrice" placeholder="En Düşük" />
+                </div>
+                <div class="">
+                    <input class="form-control" asp-for="MaxPrice" placeholder="En Yüksek" />
+                </div>
+                <div class="">
+                    <select class="form-select" asp-for="CategoryId" asp-items="ViewBag.Categories" placeholder="Tür">
+                        <option selected>[Seçiniz]</option>
+                    </select>
+                </div>
+                <div class="">
+                    <select class="form-select" asp-for="PostType" asp-items="@Html.GetEnumSelectList<PostTypes>()" placeholder="Tür">
+                        <option selected>[Seçiniz]</option>
+                    </select>
+                </div>
+                <div class="">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="bi bi-search"></i> Ara
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
+</div>
