--- a/MVCRealEstate/Views/Shared/_PostListPartial.cshtml
+++ b/MVCRealEstate/Views/Shared/_PostListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Post>
+﻿@model IEnumerable<GetPostViewModel>
 
 <div class="row row-cols-1 row-cols-lg-4 g-4 lazy">
     @foreach (var post in Model)
